Adding markup for page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <link href='./styles.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-
+    <header>
+      <h1>Broadway Design</h1>
+      <nav>
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Work</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <div id="mainSection">
+          <h2>Our Process</h2>
+          <div id="Identity">
+            <img src="./recources/identity.svg" />
+            <h3>Identity</h3>
+          </div>
+        </div>
+      </nav>
   </body>
 </html>
