Adding further markup to page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Broadway</title>
-  <link href='./styles.css' rel='stylesheet' type='text/css'>
+  <link href='.css/styles.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
@@ -17,9 +17,20 @@
         </ul>
         <div id="mainSection">
           <h2>Our Process</h2>
-          <div id="Identity">
-            <img src="./recources/identity.svg" />
-            <h3>Identity</h3>
+          <div id="Identify">
+            <img src="./resources/identify.svg" />
+            <h3>Identify</h3>
+            <p>We focus on the most important details.</p>
+          </div>
+          <div id="understand">
+            <img src=".resources/understand.svg" />
+            <h3>Understand</h3>
+            <p>We study our projects inside and out.</p>
+          </div>
+          <div id="execute">
+            <img src=".resources/execute.svg" />
+            <h3>Execute</h3>
+            <p>We put everything we have into our work.</p>
           </div>
         </div>
       </nav>
