--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <li><a href="#">Team</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <div id="mainSection">
+      </nav>
+        <div id="ourProcess">
           <h2>Our Process</h2>
           <div id="Identify">
             <img src="./resources/identify.svg" />
@@ -33,6 +34,13 @@
             <p>We put everything we have into our work.</p>
           </div>
         </div>
-      </nav>
+        <div id="companyDetails">
+          <h2 id="desginedNY">Designed in New York</h2>
+          <h3>Portfolio</h3>
+          <p>Coming Soon</p>
+          <h3>Team</h3>
+          <p>We're Hiring!</p>
+
+        </div>
   </body>
 </html>
