Completing markup for page with comments.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link href='.css/styles.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+<!-- Header with navigation starts -->
+
     <header>
       <h1>Broadway Design</h1>
       <nav>
@@ -16,6 +18,12 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+    </header>
+
+<!-- Header with navigation ends -->
+
+<!-- Our Processes section starts -->
+
         <div id="ourProcess">
           <h2>Our Process</h2>
           <div id="Identify">
@@ -34,13 +42,42 @@
             <p>We put everything we have into our work.</p>
           </div>
         </div>
+
+<!-- Our Processes section ends -->
+
+<!-- Company details section starts -->
+
         <div id="companyDetails">
           <h2 id="desginedNY">Designed in New York</h2>
           <h3>Portfolio</h3>
           <p>Coming Soon</p>
           <h3>Team</h3>
           <p>We're Hiring!</p>
-
+          <div id="contact">
+            <h3>Contact</h3>
+            <p>Phone: (555)-555-5555</p>
+            <p>E-mail: test@example.com</p>
+            <p>Twitter: @test</p>
+          </div>
         </div>
+<!-- Our Processes section ends -->
+
+<!-- Footer starts -->
+
+          <div id="footer">
+            <nav>
+              <ul>
+                <li>© Broadway 2017</li>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Work</a></li>
+                <li><a href="">Team</a></li>
+                <li><a href="">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+
+<!-- Footer ends -->
+
   </body>
 </html>
