--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <p>We focus on the most important details.</p>
           </div>
           <div id="understand">
-            <img src=".resources/understand.svg" />
+            <img src="./resources/understand.svg" />
             <h3>Understand</h3>
             <p>We study our projects inside and out.</p>
           </div>
           <div id="execute">
-            <img src=".resources/execute.svg" />
+            <img src="./resources/execute.svg" />
             <h3>Execute</h3>
             <p>We put everything we have into our work.</p>
           </div>
