Adding main styling to page.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>Broadway</title>
-  <link href='.css/styles.css' rel='stylesheet' type='text/css'>
+  <link href='./resources/css/styles.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
 <!-- Header with navigation starts -->
 
-    <header>
+    <header class="sectionTitle">
       <h1>Broadway Design</h1>
       <nav>
         <ul>
@@ -24,19 +24,19 @@
 
 <!-- Our Processes section starts -->
 
-        <div id="ourProcess">
+        <div class="mainSection">
           <h2>Our Process</h2>
-          <div id="Identify">
+          <div class=section>
             <img src="./resources/identify.svg" />
             <h3>Identify</h3>
             <p>We focus on the most important details.</p>
           </div>
-          <div id="understand">
+          <div class=section>
             <img src="./resources/understand.svg" />
             <h3>Understand</h3>
             <p>We study our projects inside and out.</p>
           </div>
-          <div id="execute">
+          <div class=section>
             <img src="./resources/execute.svg" />
             <h3>Execute</h3>
             <p>We put everything we have into our work.</p>
@@ -45,26 +45,36 @@
 
 <!-- Our Processes section ends -->
 
+<!-- Desgined in NY starts -->
+
+        <div class="sectionTitle">
+          <h2>Designed in New York</h2>
+        </div>
+
+<!-- Desgined in NY ends -->
+
 <!-- Company details section starts -->
 
-        <div id="companyDetails">
-          <h2 id="desginedNY">Designed in New York</h2>
+        <div class="section">
           <h3>Portfolio</h3>
           <p>Coming Soon</p>
+        </div>
+        <div class="section">
           <h3>Team</h3>
           <p>We're Hiring!</p>
-          <div id="contact">
+        </div>
+        <div class="section">
             <h3>Contact</h3>
             <p>Phone: (555)-555-5555</p>
             <p>E-mail: test@example.com</p>
             <p>Twitter: @test</p>
-          </div>
         </div>
+
 <!-- Our Processes section ends -->
 
 <!-- Footer starts -->
 
-          <div id="footer">
+          <div class="footer">
             <nav>
               <ul>
                 <li>© Broadway 2017</li>
